update website link

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <h1>Weather Boy</h1>
       <h2>A Discord bot</h2>
       <a
-        href="https://discord.com/api/oauth2/authorize?client_id=818640856508137502&permissions=0&scope=bot"
+        href="https://discord.com/api/oauth2/authorize?client_id=899436791990456370&permissions=0&scope=bot"
         target="_blank"
         >Add Weather Boy to your server!</a
       >
@@ -27,8 +27,8 @@
       <div class="command-container">
         <h3>$now</h3>
         <p>
-          Weather Boy will return the current conditions when a user sends a
-          message beginning with <span>$now</span> followed by a city name.
+          Weather Boy will return the current conditions when a user sends a message beginning with
+          <span>$now</span> followed by a city name.
         </p>
         <img
           src="https://res.cloudinary.com/djdctouse/image/upload/v1615908325/weatherboy/image_3_uq6ac8.png"
@@ -38,8 +38,8 @@
       <div class="command-container">
         <h3>$5day</h3>
         <p>
-          Weather Boy will return a 5-day forecast when a user sends a message
-          beginning with <span>$5day</span> followed by a city name.
+          Weather Boy will return a 5-day forecast when a user sends a message beginning with
+          <span>$5day</span> followed by a city name.
         </p>
         <img
           src="https://res.cloudinary.com/djdctouse/image/upload/v1615908476/weatherboy/image_4_rufhla.png"
