fix perms for threads

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <h1>Weather Boy</h1>
       <h2>A Discord bot</h2>
       <a
-        href="https://discord.com/api/oauth2/authorize?client_id=899436791990456370&permissions=0&scope=bot"
+        href="https://discord.com/api/oauth2/authorize?client_id=899436791990456370&permissions=274877910080&scope=bot"
         target="_blank"
         >Add Weather Boy to your server!</a
       >
